<resources>
    <string name="app_name">MessengerFirebase</string>
    <string name="messenger">Messenger</string>
    <string name="your_email">Your email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="email_reg">Email</string>
    <string name="password_reg">Password</string>
    <string name="name_reg">Name</string>
    <string name="last_name_reg">Last name</string>
    <string name="age_reg">How old are you?</string>
    <string name="sign_up_reg">SIGN UP</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="logout">Logout</string>
    <string name="write_in_all_fields">Write in all fields</string>
    <string name="write_email_field">Write email field</string>
    <string name="type_your_message">Type your message</string>
</resources>