<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".view.RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/registration"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="50sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextEmailReg"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_reg"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextPasswordReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_reg"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editTextNameReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_reg"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/editTextLastNameReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name_reg"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/editTextAgeReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age_reg"
            android:inputType="number" />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_light"
            android:text="@string/sign_up_reg"
            android:textColor="@color/white" />

    </LinearLayout>

</ScrollView>