<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.LoginActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/messenger"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="50sp"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3">

        <EditText
            android:id="@+id/editTextEmailReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/your_email"
            android:inputType="textEmailAddress"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmailReg" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@android:color/holo_blue_light"
            android:text="@string/login"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:paddingEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin">

            <TextView
                android:id="@+id/textViewForgotPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/forgot_password"
                app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

            <TextView
                android:id="@+id/textViewRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="end"
                android:text="@string/register" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>