<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".view.ResetPasswordActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/forgot_password"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextEmailReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/buttonResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/reset_password"
        android:textColor="@color/white" />

</LinearLayout>